HelloUltraviolet/Fixtures/RejectedSource/Expressions/RaceStreamOperandNeedsInput/Expected.uv
//! Expected diagnostic metadata for the RaceStreamOperandNeedsInput rejected-source specimen.

expectedDiagnostic("E-CON-0261", "rule.21.Race-Stream-Operand-Err")
